# tutorials

./: .gitignore  .gitignore~  LICENSE.md  README.md  test.py
2601Crawler/: crawlerJobDB.py
2601Crawler/html/: 1.html  10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  122.html  123.html  124.html  125.html  126.html  127.html  128.html  129.html  13.html  130.html  131.html  132.html  133.html  134.html  (+114 more)
2601Discussion/signUp/2601/: StyleSheet.css  newReg.php
2601Discussion/signUp/nbproject/: project.xml
algorithms/nbproject/: project.properties
algorithms/nbproject/private/: private.properties  private.xml
angular_tutorials/thinkster.io/angular-tutorial/: package-lock.json
cmake_tutorials/: CMakeLists.txt
cmake_tutorials/src/MathFunctions/: CMakeLists.txt  MakeTable.cxx
dj/: db.sqlite3
dj/blog/: models.py  views.py
dj/mysite/: settings.py
docs/: index.html
docs/linux/avoid_rsync_disaster/: avoid_rsync_disaster.html
docs/opencv/cpp_set_pixel_value/: c++_set_pixel_value.html
fftw_tutorials/2.1_Complex_One-Dimensional_DFTs/: dft_1d.c
fftw_tutorials/2.2_Complex_Multi-Dimensiona_DFTs/: dft_2d.c
gstreamer_tutorials/basic/: CMakeLists.txt
gstreamer_tutorials/basic/src/: basic-tutorial-1.c  basic-tutorial-12.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-5.c  basic-tutorial-6.c  basic-tutorial-7.c  basic-tutorial-8.c  basic-tutorial-9.c
java_spring/maven/demo/: pom.xml
machine_learning/kaggle_dogs_vs_cats/: softmax.py
misc_ml/cs231n_minimal_network_case_study/: cs231n_minimal_network_case_study.py
opencv_tutorials/CannyStill/: CanStill.py
opencv_tutorials/opencv_cpp_tutorials/: CMakeLists.txt  cmake_command.sh
opencv_tutorials/opencv_cpp_tutorials/Introduction_to_OpenCV/Load_and_Display_an_Image/: CMakeLists.txt
opencv_tutorials/opencv_cpp_tutorials/Introduction_to_OpenCV/Load_and_Display_an_Image/src/: DisplayImage.cpp
opencv_tutorials/opencv_cpp_tutorials/Introduction_to_OpenCV/Using_OpenCV_with_gcc_and_CMake/src/: DisplayImage.cpp
opencv_tutorials/opencv_cpp_tutorials/nbproject/: configurations.xml  project.properties  project.xml
opencv_tutorials/opencv_cpp_tutorials/nbproject/private/: Default.properties  configurations.xml  private.xml
opencv_tutorials/opencv_cpp_tutorials/src/: CMakeLists.txt  myrun.sh  run.sh
opencv_tutorials/opencv_cpp_tutorials/src/2D_Features_Framework/: CMakeLists.txt
opencv_tutorials/opencv_cpp_tutorials/src/2D_Features_Framework/Feature_Matching_with_FLANN/: CMakeLists.txt  FeatureMatchingWithFLANN.cpp
opencv_tutorials/opencv_cpp_tutorials/src/Introduction_to_OpenCV/: CMakeLists.txt
opencv_tutorials/opencv_cpp_tutorials/src/Introduction_to_OpenCV/Load_Modify_and_Save_an_Image/: LoadModifyDisplayImage.cpp
opencv_tutorials/opencv_cpp_tutorials/src/Introduction_to_OpenCV/Load_and_Display_a_Video/: CMakeLists.txt  DisplayVideo.cpp  Makefile  cmake_install.cmake
opencv_tutorials/opencv_cpp_tutorials/src/Introduction_to_OpenCV/Load_and_Display_an_Image/: CMakeLists.txt  DisplayImage.cpp
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/: CMakeLists.txt
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Basic_Drawing/: BasicDrawing.cpp  CMakeLists.txt
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Contrast_and_Brightness/: CMakeLists.txt  ContrastAndBrightness.cpp
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Discrete_Fourier_Transform/: CMakeLists.txt
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/How_to_Scan_Images/: CMakeLists.txt  HowToScanImages.cpp
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Mask_Operations_on_Matrices/: CMakeLists.txt  MaskOperationsOnMatrices.cpp
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Mat_The_Basic_Image_Container/: CMakeLists.txt  CMakeLists.txt~  MatTheBasicImageContainer.cpp
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Operations_with_Images/: CMakeLists.txt  CMakeLists.txt~  OperationsWithImages.cpp
opencv_tutorials/opencv_cpp_tutorials/src/The_Core_Functionality/Random_and_Text/: CMakeLists.txt
opencv_tutorials/opencv_python_tutorials/Camera Calibration and 3D Reconstruction/: 2_Pose.py  4_Epipolar.py
opencv_tutorials/opencv_python_tutorials/Camera_Calibration_and 3D_Reconstruction/: 1_Camera.py  3_PoseInteract.py  4_Epipolar.py  B.npz
opencv_tutorials/opencv_python_tutorials/Camera_Calibration_and_3D_Reconstruction/: 1_Camera.py  2_Pose.py  3_PoseInteract.py  4_Epipolar.py  5_DepthMap.py  B.npz
opencv_tutorials/sentdev/: 10_Gradient_Edge.py  11_matchTemplate.py  12_grabCut.py  13_Corner_Detection.py  14_Feature_Matching.py  15_BackgroundSubtractorMOG.py  16_Haarcascade.py  18_ImageNet.py  19_Cleanup.py  1_imshow.py  20_Self_Haarcascade.py  22_Contour.py  2_VideoWriter.py  3_Draw.py  4_roi.py  5_bool.py  6_threshold.py  7_inRange.py  8_Filters.py  9_morphologyEx.py  caveWall.py  caveWallPrep.py  find_game.py  pillarMatch.py
opencv_tutorials/sentdev/opencv_workspace/: bg.txt  positives.vec
perl_tests/: hello_world.pl
pytorch_tutorials/: LICENSE.md
pytorch_tutorials/image/adversarial_example_generation/: adversarial_example_generation.py
pytorch_tutorials/image/dcgan/: dcgan.py
pytorch_tutorials/image/neural_transfer_using_pytorch/: neural_transfer_using_pytorch.py
pytorch_tutorials/image/spatial_transformer_networks/: spatial_transformer_networks.py
tensorflow_tutorials/: License  log_platform_version.py  pip_list.txt  platform_version.txt  run_all_python_scripts.sh
tensorflow_tutorials/quick_start/: quick_start_for_beginners.py
transformer/: transformer.ipynb
web_dev/2601Discussion/: extractname.py
web_dev/signUP/: jscode.js
zeromq_tutorials/cpp/: hwclient.cpp  hwserver.cpp
zeromq_tutorials/python/: hwclient.py  hwserver.py
(+87 files in other folders)
